namespaces/live.cloud-platform.service.justice.gov.uk/offender-management-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offender-management-test
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "Offender Management in Custody services"
    cloud-platform.justice.gov.uk/owner: "Offender Management Team: manage-pom-cases@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/offender-management-allocation-manager"
    cloud-platform.justice.gov.uk/slack-channel: "manage-pom-cases"
